--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -2,7 +2,7 @@
 ftp.server.ip=192.168.1.188
 ftp.user=ftpuser
 ftp.pass=123456
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.http.prefix=ftp://192.168.1.188/
 
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
