--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -5,7 +5,7 @@ ftp.pass=123456
 ftp.server.http.prefix=ftp://192.168.1.188/
 
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+alipay.callback.url=http://yangyang.natapp1.cc/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
